<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@+id/nav_catalogo">

    <fragment
            android:id="@+id/nav_catalogo"
            android:name="com.example.bya.ui.catalogo.CatalogoFragment"
            android:label="@string/menu_catalogo"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_devolver"
            android:name="com.example.bya.ui.devolver.DevolverFragment"
            android:label="@string/menu_devolver"
            tools:layout="@layout/fragment_devolver"/>

    <fragment
            android:id="@+id/nav_contacto"
            android:name="com.example.bya.ui.contacto.ContactoFragment"
            android:label="@string/menu_contacto"
            tools:layout="@layout/fragment_slideshow"/>

    <fragment
            android:id="@+id/nav_pedidos"
            android:name="com.example.bya.ui.pedidos.PedidosFragment"
            android:label="@string/menu_pedidos"
            tools:layout="@layout/fragment_pedidos"/>

    <fragment
            android:id="@+id/nav_perfil"
            android:name="com.example.bya.ui.perfil.PerfilFragment"
            android:label="@string/menu_perfil"
            tools:layout="@layout/fragment_perfil"/>

</navigation>