<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/cestaPagoLayout"
                                                   android:background="@color/white"
                                                   tools:context=".ui.cesta.CestaPagoFragment">

    <ImageView
            android:id="@+id/imgCestaPagoCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cerrar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bya"
                    android:textSize="100sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:id="@+id/tvCestaPagoTitulo"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp">

            </TextView>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccionaPago"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/tvCestaPagoSelecciona"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp">

            </TextView>


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="horizontal"
                          android:layout_marginTop="20dp"
                          app:layout_constraintTop_toTopOf="parent"
                          app:layout_constraintStart_toStartOf="parent">

                <ImageView
                        android:src="@drawable/visa"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgCestaPagoVisa"
                        android:layout_weight="1" />

                <ImageView
                        android:src="@drawable/mastercard"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgCestaPagoMastercard"
                        android:layout_weight="1" />
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/viewCestaPagoLinea"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/nTarjeta"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:id="@+id/etCestaPagoTarjeta" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/fechaCaducidad"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:id="@+id/etCestaPagoFecha" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/csv2"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:id="@+id/etCestaPagoCsv" />

            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:textSize="40sp"
                    android:textColor="@color/black"
                    android:layout_gravity="right"
                    android:id="@+id/tvCestaPagoTotal" />

            <Button
                    android:id="@+id/btnCestaPagoPagar"
                    android:layout_width="250dp"
                    android:layout_height="65dp"
                    style="@style/Animation.Design.BottomSheetDialog"
                    android:text="@string/pagar"
                    android:backgroundTint="@color/primary"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp" />

        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>