<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_margaritas"
        tools:context=".RegistroActivity">


    <LinearLayout
            android:id="@+id/linearRegistro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="44dp">


        <ImageView
                   android:id="@+id/imgRegistro"
                   android:layout_width="178dp"
                   android:layout_height="178dp"
                   android:src="@drawable/ic_profile_user"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:layout_gravity="center"
                   />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegistroNombre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:paddingLeft="42dp"
                android:paddingTop="5dp"
                android:paddingRight="42dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistroNombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegistroEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingLeft="42dp"
                android:paddingTop="5dp"
                android:paddingRight="42dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisroPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingLeft="42dp"
                android:paddingTop="5dp"
                android:paddingRight="42dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/ic_padlock"
                app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistroPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/btnRegistroRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                style="@style/Animation.Design.BottomSheetDialog"
                android:gravity="center"
                android:layout_marginRight="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="50dp"
                android:text="@string/registrarse"
                android:backgroundTint="@color/black"
                android:textSize="25dp"
        />

        <Button
                android:id="@+id/btnRegistroCancelar"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                style="@style/Animation.Design.BottomSheetDialog"
                android:gravity="center"
                android:layout_marginRight="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="20dp"
                android:text="@string/cancelar"
                android:backgroundTint="@color/black"
                android:textSize="25dp"
        />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>