<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/cestaAgradecimientoLayout"
                                                   android:background="@drawable/pink_margaritas"
                                                   tools:context=".ui.cesta.CestaAgradecimientoFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/linearLayout2" app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
                android:src="@drawable/ic_carro"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/imgCestaAgradecimientosCarro"/>

        <TextView
                android:text="@string/gracias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/tvCestaAgradecimiento1"/>

        <TextView
                android:text="@string/agradecimientos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"
                android:id="@+id/tvCestaAgradecimiento2"/>

    </LinearLayout>

    <Button
            android:id="@+id/btnCestaAgradecimientosVolver"
            android:layout_width="250dp"
            android:layout_height="65dp"
            style="@style/Animation.Design.BottomSheetDialog"
            android:text="@string/volver"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>